# Shark

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: HelperScripts.cmake
Include/Shark/: Bits.hpp  Common.hpp  Geometry.hpp  Quaternion.hpp  Random.hpp  Shark.hpp  Vector.hpp
Include/Shark/Core/: Check.hpp  Concepts.hpp  Containers.hpp  Defines.hpp  Float.hpp  Matrix.hpp  Transform.hpp
Include/Shark/Core/Detail/: Setup.hpp
Include/Shark/Detail/: Setup.hpp
Include/Shark/Math/: Common.hpp  Constants.hpp  Math.hpp  Quaternion.hpp  Random.hpp  Transform.hpp
Include/Shark/Math/Detail/: Bits.hpp  Common.hpp  Constants.hpp  Float.hpp  Geometry.hpp  Matrix.hpp  Vector.hpp
Include/Shark/Math/Detail/Vector/: VectorCore.hpp  VectorMath.hpp  VectorOps.hpp  VectorType.hpp
Source/: Shark.cpp
Tests/: CMakeLists.txt
Tests/CUDA/: CMakeLists.txt  Test.cu  TestCommon.cu  TestMath.cu  TestMath.hpp  TestVector.cu
Tests/Units/: BitsTest.cpp  CMakeLists.txt  CommonTest.cpp  SharkTest.cpp  VectorTest.cpp
